--- a/app/views/robots/index.html.erb
+++ b/app/views/robots/index.html.erb
@@ -19,13 +19,12 @@
         <td><%= robot.y %></td>
         <td><%= robot.f %></td>
         <td><%= link_to 'Show', robot %></td>
-        <td><%= link_to 'Edit', edit_robot_path(robot) %></td>
-        <td><%= link_to 'Destroy', robot, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- <td><%#= link_to 'Edit', edit_robot_path(robot) %></td>
+        <td><%#= link_to 'Destroy', robot, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
 <%= link_to 'New Robot', new_robot_path %>
