Writing the RSpec test for def place in robots controller.

--- a/app/views/robots/show.html.erb
+++ b/app/views/robots/show.html.erb
@@ -17,7 +17,7 @@ Or, enter the new Place position:
   <%= text_field_tag :y, params[:y], placeholder: "Y position" %>
   <div class="radio">
     <label>
-      <input type="radio" name="f" id= value="NORTH">  <%# checked %>
+      <input type="radio" name="f" id="f" value="NORTH">  <%# checked %>
       NORTH
     </label>
   </div>
