Added notes in readme.md file.

--- a/app/views/robots/show.html.erb
+++ b/app/views/robots/show.html.erb
@@ -8,7 +8,7 @@
 <br>
 Please select Robot's action from the list:
 <br>
-<%= link_to 'Move', move_robot_path, class: 'btn' %> | <%= link_to 'Left', left_robot_path, class: 'btn' %> | <%= link_to 'Right', right_robot_path, class: 'btn' %> | <%= link_to 'Place', place_robot_path(reset: 'new_place') %>
+<%= link_to 'Move', move_robot_path, class: 'btn' %> | <%= link_to 'Left', left_robot_path, class: 'btn' %> | <%= link_to 'Right', right_robot_path, class: 'btn' %> | <%= link_to 'Place to Origin (0,0,EAST)', place_robot_path(reset: 'new_place') %>
 <br><br>
 Or, enter the new Place position:
 <br>
